--- a/mob/index.html
+++ b/mob/index.html
@@ -129,6 +129,13 @@
             Ver.{{ INFO.appVersion }}
             by <a :href="INFO.url">{{ INFO.auther }}</a>
         </address>
+        <div class="content has-text-centered">
+            Data Source:
+            <a href="https://www.sunny-stronger.com/">さにすとのにちじょう</a> / 
+            <a href="https://game8.jp/ff14">ゲームエイト FF14攻略</a> / 
+            <a href="https://www.mtgames.jp/ff14/item/">Pamama FF14便利手帳</a><br />
+            © SQUARE ENIX
+            </div>
     </footer>
 
     <script>
