--- a/mob/index.html
+++ b/mob/index.html
@@ -19,7 +19,7 @@
         const INFO = { // 基本的な情報
             appName: 'MobStamp', // アプリの名前（全言語共通）
             // ページのタイトルは翻訳辞書の方で指定する
-            appVersion: '7.1120241227', // アプリのバージョン
+            appVersion: '7.1120250107', // アプリのバージョン
             storageCode: 'mob', // ローカルストレージのキーの頭に付ける符号
             storageVersion: '1.0', // ローカルストレージのデータ形式のバージョン
             auther: 'Omochi Kinako (Chocobo)', // 作者の名前
@@ -66,9 +66,10 @@
             </div>
         </div>
         <template v-for="(patch, p) of PATCHS">
-            <!-- 韓国語版はまだ黄金が配信されていないので表示しない -->
-            <details :id="'detail_' + p" v-if="sharedData.lang !== 'ko' || p !== 0">
-                <summary @click="saveOpenedDetails(p)" class="has-text-weight-bold">{{ WORD(patch.fullName)[sharedData.lang] }}</summary>
+            <!-- <details :id="'detail_' + p" v-if="sharedData.lang !== 'ko' || p !== 0"> -->
+            <!-- 韓国語版の配信が遅れたら↑ここ↓を入れ替える -->
+            <details :id="'detail_' + p">
+            <summary @click="saveOpenedDetails(p)" class="has-text-weight-bold">{{ WORD(patch.fullName)[sharedData.lang] }}</summary>
                 <div v-for="level of LEVELS[patch.nickName]">
                     <div class="has-text-weight-bold">{{ WORD(patch.nickName + ' ' + level)[sharedData.lang] }}</div>
                     <ul>
@@ -77,7 +78,7 @@
                                 <input type="checkbox" v-model="checkedSet[patch.nickName][level]" :value="s" />
                                 <span class="has-text-weight-bold">{{ WORD(set[0])[sharedData.lang] }}</span>,
                                 {{ WORD(set[1])[sharedData.lang] }},
-                                ...
+                                {{ WORD(set[2])[sharedData.lang].substring(0, 3) }}...
                             </label>
                         </li>
                     </ul>
