--- a/mob/index.html
+++ b/mob/index.html
@@ -19,7 +19,7 @@
         const INFO = { // 基本的な情報
             appName: 'MobStamp', // アプリの名前（全言語共通）
             // ページのタイトルは翻訳辞書の方で指定する
-            appVersion: '7.1120250107', // アプリのバージョン
+            appVersion: '7.1120250117', // アプリのバージョン
             storageCode: 'mob', // ローカルストレージのキーの頭に付ける符号
             storageVersion: '1.0', // ローカルストレージのデータ形式のバージョン
             auther: 'Omochi Kinako (Chocobo)', // 作者の名前
@@ -68,7 +68,7 @@
         <template v-for="(patch, p) of PATCHS">
             <details :id="'detail_' + p">
             <!-- 韓国語版の配信が遅れたら↑ここ↓を入れ替える -->
-            <!-- details :id="'detail_' + p" v-if="sharedData.lang !== 'ko' || p !== 0" -->
+            <!-- <details :id="'detail_' + p" v-if="sharedData.lang !== 'ko' || p !== 0"> -->
             <summary @click="saveOpenedDetails(p)" class="has-text-weight-bold">{{ WORD(patch.fullName)[sharedData.lang] }}</summary>
                 <div v-for="level of LEVELS[patch.nickName]">
                     <div class="has-text-weight-bold">{{ WORD(patch.nickName + ' ' + level)[sharedData.lang] }}</div>
